# Resume-Screening

./: .gitignore  app.py  pyproject.toml  pyproject_bkp.toml  readme.md  requirement.txt  requirements.txt  resume_processor.md  resume_processor.py  resume_processor_perplexity.md  resume_processor_perplexity.py
chroma_store/: chroma.sqlite3
docs/: resume_processor_perplexity.md
